--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bevy_rapier2d = { version = "0.23.0", features = [
   "debug-render-2d",
   "parallel",
 ] }
+rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
